# study-rag

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
src/module_rag/: cli.py  config.py
src/module_rag/generation/: chains.py
src/module_rag/ingestion/: chunking.py  loaders.py  pipeline.py
src/module_rag/retrieval/: baseline.py  compression.py  hybrid.py  metadata_filter.py  parent_doc.py  query_transform.py  reranker.py
