[project]
name = "module-rag"
version = "0.1.0"
description = "CLI-based RAG system over university module slides and notes"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langgraph>=0.2",
    "langchain-ollama>=0.2",
    "langchain-huggingface>=0.1",
    "sentence-transformers>=3.0",
    "chromadb>=0.5",
    "pymupdf>=1.24",
    "python-pptx>=1.0",
    "python-docx>=1.1",
    "pytesseract>=0.3",
    "ragas>=0.2",
    "typer>=0.12",
    "rich>=13.0",
    "pydantic-settings>=2.0",
    "rank-bm25>=0.2",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "langchain-chroma>=0.1",
]

[project.scripts]
module-rag = "module_rag.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/module_rag"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["module_rag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
